# egarch-2026

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: codex-cloud.md
docs/superpowers/specs/: 2026-06-24-egarch-service-design.md
egarch_service/: __init__.py  config.py  domain.py  engine.py  main.py  storage.py
egarch_service/api/: dependencies.py  routes.py  schemas.py
egarch_service/assets/: __init__.py  calendars.py  pricing.py  registry.py
egarch_service/data/: __init__.py  providers.py  repositories.py  sqlite.py  yahoo.py
egarch_service/services/: __init__.py  errors.py  forecasts.py  refresh.py
scripts/: setup_cloud.sh
tests/: test_api_contracts.py  test_assets_domain.py  test_domain_storage_engine.py  test_engine.py
tests/integration/: test_sqlite_repositories.py
tests/unit/: test_yahoo_provider.py
