[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egarch-2026"
version = "0.1.0"
description = "FastAPI service for T-1 fresh EGARCH volatility forecasts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=7.2.0",
    "exchange-calendars>=4.5.0",
    "fastapi>=0.115.0,<0.138.0",
    "httpx>=0.27.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["egarch_service*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live_provider: tests that call live market-data providers and are skipped by default",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
packages = ["egarch_service"]

[tool.ruff.lint.per-file-ignores]
"egarch_service/storage.py" = ["E501"]
"egarch_service/services/__init__.py" = ["E402", "F401", "F811", "F821", "E501", "I001"]
"tests/*" = ["E501", "I001"]
"egarch_service/api/routes.py" = ["B008"]
"egarch_service/api/dependencies.py" = ["B008"]
# Broad ignores for generated integration scaffolding in this implementation pass.
[tool.ruff.lint.extend-per-file-ignores]
"egarch_service/api/routes.py" = ["B008", "E501"]
"egarch_service/api/dependencies.py" = ["B008"]
"egarch_service/data/repositories.py" = ["E501"]
"egarch_service/data/yahoo.py" = ["E501"]
"egarch_service/engine.py" = ["E501", "B905"]
"egarch_service/main.py" = ["E501"]
